@@ -1,4 +1,4 @@
-.\"	$NetBSD: banner.6,v 1.9 1997/10/10 09:48:47 lukem Exp $
+.\"	$NetBSD: banner.6,v 1.10 2001/03/07 22:30:38 garbled Exp $
 .\"
 .\" Copyright (c) 1980, 1993, 1995
 .\"	The Regents of the University of California.  All rights reserved.
@@ -37,7 +37,7 @@
 .Dt BANNER 6
 .Os
 .Sh NAME
-.Nm banner 
+.Nm banner
 .Nd print large banner on printer
 .Sh SYNOPSIS
 .Nm
