@@ -8637,7 +8637,7 @@ mine.  Better, probably, because you haven't had four beers.
 Manual, n.:
 	A unit of documentation.  There are always three or more on a
 given item.  One is on the shelf; someone has the others.  The
-information you need in in the others.
+information you need is in the others.
 		-- Ray Simard
 %
 Many years ago in a period commonly know as Next Friday Afternoon,
