@@ -6949,10 +6949,6 @@ Hear about...
 	next morning found she was six months pregnant?
 %
 Hear about...
-	the farmer who couldn't keep his
-	hands off his wife so he fired them?
-%
-Hear about...
 	the farmer who couldn't keep his hands off his wife, so he
 	fired them?
 %
