@@ -1,4 +1,4 @@
-$NetBSD: acronyms,v 1.75 2000/12/31 13:39:02 ad Exp $
+$NetBSD: acronyms,v 1.82 2001/03/13 05:51:46 mason Exp $
 
 AFAICR	as far as I can recall
 AFAICT	as far as I can tell
@@ -7,12 +7,15 @@ AFAIR	as far as I recall
 AFK	away from keyboard
 AKA	also known as
 ASAP	as soon as possible
+AWOL	absent without official leave
+AYBABTU	all your base are belong to us
 BBL	[I'll] be back later
 BBS	be back soon
 BBT	be back tomorrow
 BFD	big fucking deal
 BIAB	back in a bit
 BIAF	back in a few
+BIALW	back in a little while
 BIAS	back in a second
 BIAW	back in a while
 BOFH	bastard operator from hell
@@ -97,6 +100,7 @@ PPL	pretty please
 QED	quod erat demonstrandum
 RFC	request for comments
 RL	real life
+RLC	rod length check
 ROTFL	rolling on the floor laughing
 RP	responsible person
 RSN	real soon now
@@ -117,6 +121,7 @@ SOL	shit out [of] luck
 SUS	stupid user syndrome
 SWAG	silly, wild-assed guess
 SWAHBI	silly, wild-assed hare-brained idea
+TANSTAAFL	there ain't no such thing as a free lunch
 TIA	thanks in advance
 TLA	three letter acronym
 TMI	too much information
@@ -125,6 +130,7 @@ TTYL	talk to you later
 TYVM	thank you very much
 UTSL	use the source, Luke
 VEG	very evil grin
+WIBNI	wouldn't it be nice if
 WOFTAM	waste of fucking time and money
 WTF	{what,where,who,why} the fuck
 WTH	{what,where,who,why} the hell
